# jaunt

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DOCS.md  FEEDBACK.md  JAUNT_LOG  PLAN-dependency-tracing-fixes.md  README.md  TASK-110-MCP-SERVER.md  TASK-130-CACHING.md  TODO-FEEDBACK.md  cliff.toml  jaunt.toml  plan.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.codex/skills/: aider.md
.githooks/: pre-commit
.github/: actionlint.yaml
.github/workflows/: ci.yml  claude.yml  docs-pages.yml  release.yml
.scratch/: task-log.txt  task-out.md  task-prompt.md
.scratch-task5/: codex.pid  task-log.txt  task-out.md  task-prompt.md
.scratch/task4/: codex.pid  task-log.txt  task-out.md  task-prompt.md
AGENT_PROMPTS/: PROMPT-100-JAUNT-EXAMPLES-RUNNER.md  PROMPT-101-DEMO-DEPS-PYDANTIC.md  PROMPT-110-EXAMPLE-JWT-AUTH.md  PROMPT-120-EXAMPLE-MARKDOWN-RENDER.md  PROMPT-130-EXAMPLE-RATE-LIMITER.md  PROMPT-140-EXAMPLE-CSV-PARSER.md  PROMPT-160-DOCS-UPDATE-HACKATHON-EXAMPLES.md  STATUS.md
docs/: hooks.md
docs-site/: README.md  next.config.mjs
docs-site/app/: layout.tsx
docs-site/components/: moved.tsx
docs-site/lib/: layout.shared.tsx
docs/principles/: 2026-06-29-building-with-coding-agents.md
docs/ts-port/: DESIGN.md  IMPLEMENTATION_PLAN.md
examples/: README.md  _dotenv.py  demo_on_the_fly.py  run_example.py
examples/06_whole_class/: README.md  jaunt.toml
examples/07_ultimate_ttt/: CASE-STUDY.md  README.md  jaunt.toml
examples/contract_async/: README.md
examples/contract_properties/: README.md  jaunt.toml
examples/contract_slugify/: README.md  jaunt.toml
examples/rich_tictactoe/: README.md  jaunt.toml
examples/typescript-jwt/: .gitignore  README.md  consumer-smoke.mjs  jaunt.toml  package-lock.json  package.json  treedocs.yaml  tsconfig.analysis.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
examples/typescript_project_references/: .gitignore  README.md  jaunt.toml  package-lock.json  package.json  pnpm-lock.yaml  treedocs.yaml  tsconfig.json  tsconfig.test.json
examples/typescript_slugify/: .gitattributes  .gitignore  JAUNT_LOG  README.md  jaunt.toml  package-lock.json  package.json  treedocs.yaml  tsconfig.json  tsconfig.test.json
jaunt-claude-plugin/: .mcp.json  README.md
jaunt-claude-plugin/.claude-plugin/: marketplace.json  plugin.json
jaunt-claude-plugin/agents/: first-build-reviewer.md
jaunt-claude-plugin/hooks/: hooks.json
jaunt-claude-plugin/scripts/: doctor.sh  guard-generated.sh  guard.sh  resolve-project.sh  resolve-workspace.sh  session-status.sh
plugins/jaunt/: README.md
scripts/: verify_github_release_assets.py  verify_pypi_candidates.py  verify_release_tags.py
src/jaunt/: __init__.py  (+58 more)
tests/: inspect_typescript_distribution.py  test_advisories_parse.py  test_advisories_surfacing.py  test_agent_docs.py  test_aider_backend.py  test_anthropic_backend.py  test_async_decorator.py  test_auto_class_tests.py  test_build_scheduler.py  test_builder_dep_context.py  test_builder_io.py  test_builder_methods.py  test_builder_repo_map.py  test_builder_whole_class.py  test_cache.py  test_cerebras_backend.py  test_change_detection.py  test_class_analysis.py  test_class_scaffold.py  test_claude_plugin.py  test_cli.py  test_cli_adopt.py  test_cli_check.py  test_cli_clean.py  test_cli_eject.py  test_cli_eval.py  test_cli_heldout.py  test_cli_init.py  test_cli_jobs.py  test_cli_jobs_wait.py  test_cli_json_mode.py  test_cli_log.py  test_cli_provider_dispatch.py  test_cli_pytest_preflight.py  test_cli_pythonpath_for_pytest.py  test_cli_reconcile.py  test_cli_skill.py  test_cli_status.py  test_cli_status_contract.py  test_cli_summaries.py  (+131 more)
toy-example/: README.md
(+373 files in other folders)
