[project]
name = "jaunt"
version = "1.5.0"
description = "Spec-driven code generation framework: write intent as decorated Python stubs, generate implementations and tests with LLMs."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["llm", "code-generation", "testing", "developer-tools", "cli"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "rich>=13,<15",
  "watchfiles>=1.0.0",
  "pytest>=8",
  "pytest-asyncio>=1.0",
  "anyio>=4.1",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/creatorrr/jaunt"
Repository = "https://github.com/creatorrr/jaunt"
Issues = "https://github.com/creatorrr/jaunt/issues"

[project.scripts]
jaunt = "jaunt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaunt"]

[tool.hatch.build.targets.sdist]
include = ["src/jaunt/"]

[dependency-groups]
dev = [
  "syrupy>=4.8.0",
  "ruff>=0.9",
  "ty",
  # Examples (jwt_auth, 04_pydantic_validation) import pydantic; it used to
  # arrive transitively via the removed fastmcp dependency.
  "pydantic>=2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["examples/**"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E741"]

[tool.ty.src]
exclude = ["examples/**"]
