[project]
name = "jaunt"
version = "1.7.9"
description = "Spec-driven code generation for Python and TypeScript: write contracts, generate validated implementations and tests with Codex."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["llm", "code-generation", "testing", "typescript", "developer-tools", "cli"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "rich>=13,<15",
  "watchfiles>=1.0.0",
  "pytest>=8",
  "pytest-asyncio>=1.0",
  "anyio>=4.1",
  "pyyaml>=6.0",
  "hypothesis>=6",
  "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/creatorrr/jaunt"
Repository = "https://github.com/creatorrr/jaunt"
Issues = "https://github.com/creatorrr/jaunt/issues"

[project.scripts]
jaunt = "jaunt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaunt"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/jaunt-ts" = "jaunt/typescript/schemas"

[tool.hatch.build.targets.sdist]
include = ["src/jaunt/", "schemas/jaunt-ts/"]

[dependency-groups]
dev = [
  "mypy>=1.15",
  "pyright>=1.1.400",
  "syrupy>=4.8.0",
  "ty",
  # Examples (jwt_auth, 04_pydantic_validation) import pydantic; it used to
  # arrive transitively via the removed fastmcp dependency.
  "pydantic>=2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["examples/**", "src/jaunt/__generated__/**", "tests/contract/**"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E741"]

[tool.ty.src]
exclude = ["examples/**", "src/jaunt/__generated__/**", "tests/contract/**"]
